# modern-stats-no-table

./: .gitignore  .prettierignore  .prettierrc.json  angular.json  package.json
docs/: index.html
src/: index.html  styles.css  styles.css.map  styles.scss
src-maui/: .gitignore  App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  StatCritValueCalculator.csproj  StatCritValueCalculator.sln
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app.component.html  app.component.ts
src/widgets/: soft-button.css
src/widgets/about/: about.css  about.css.map  about.html  about.js  about.scss
src/widgets/third-party-licenses/: third-party-licenses.css  third-party-licenses.js
src/widgets/third-party-licenses/macos/: third-party-licenses.css  third-party-licenses.css.map  third-party-licenses.html  third-party-licenses.scss
src/widgets/third-party-licenses/windows/: third-party-licenses.css.map  third-party-licenses.scss
