[package]
name = "stat-crit-value-calculator"
version = "23.9.0"
description = "現代統計學才不用查表 - 統計量臨界值計算器"
authors = ["鐘柏倫 (Cenlun Chung Po Lun)"]
license = "GPL-3.0-only"
repository = "https://github.com/ccpl17/stat-crit-value-calculator"
default-run = "stat-crit-value-calculator"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-show", "fs-read-file", "window-start-dragging", "window-create", "window-close"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
